--- a/raon-control/monitoring.html
+++ b/raon-control/monitoring.html
@@ -657,9 +657,7 @@
                                 d="M107,2.1947v122s0,26.6666-52.5,26.6666S2,124.1947,2,124.1947v-122" />
                         </svg>
 
-                        <div
-                            style="position:absolute; width:100%; top:120px; font-size: 40px; text-align: center; color: white;">
-                            5000</div>
+                        <div class="data-value" id="dewer-value">5000</div>
 
                         <div class="sub-title"></div>
                     </div>
@@ -674,32 +672,130 @@
                             <img src="images/dash-circle2.svg" id="compressor-circle2">
                         </div>
                         <div class="compressor-container">
-                            <img src="images/dash-circle3.svg" id="compressor-circle3">
+                            <div id="compressor-circle3"></div>
                         </div>
+
+                        <div class="data-value" id="compressor-value">5000</div>
 
                         <div class="sub-title"></div>
                     </div>
 
                     <!-- 1 / 5 -->
                     <div class="grid-item grid-1x1">
-                        <p class="title">Temperature
-                            <span class="tooltiptext">SYS-SUBSYS:DEV-SUBDEV:Signal</span>
-                        </p>
-                        <p class="data">
-                            <span id="">2.5</span>
-                        </p>
-                        <div class="sub-title">Gas Bag</div>
+                        <p class="title">Alarm</p>
+                        <div id="alarm-grid">
+                            <div class="alarm-item" style="background-color: #00A651;">
+                                <svg width="50" height="50">
+                                    <circle cx="25" cy="25" r="12"
+                                        style="fill:none; stroke: #e6e6e5; stroke-width:2px" />
+                                </svg>
+                            </div>
+                            <div class="alarm-item" style="background-color: #00A651;">
+                                <svg width="50" height="50">
+                                    <rect x="11" y="17" width="28" height="16" rx="8"
+                                        style="fill:none; stroke: #e6e6e5; stroke-width: 2px" />
+                                </svg>
+                            </div>
+                            <div class="alarm-item" style="background-color: #00A651;">
+                                <svg width="50" height="50">
+                                    <path
+                                        d="M33.5333,14.5V31.2333S33.5333,35.5,25,35.5s-8.5333-4.2667-8.5333-4.2667V14.5"
+                                        style="fill:none; stroke:#e6e6e5; stroke-width:2px;" />
+                                </svg>
+                            </div>
+                            <div class="alarm-item" style="background-color: #00A651;">
+                                <svg width="50" height="50">
+                                    <defs>
+                                        <style>
+                                            .ais-1 {
+                                                fill: #e6e6e5;
+                                            }
+                                        </style>
+                                    </defs>
+                                    <path class="ais-1"
+                                        d="M38.0293,28.4905a13.38,13.38,0,0,1-2.6913,5.1848,11.2541,11.2541,0,0,0-.8308-4.2432A10.4985,10.4985,0,0,0,35.5,25,11.4192,11.4192,0,0,1,38.0293,28.4905Z" />
+                                    <path class="ais-1"
+                                        d="M32.74,36.0521a13.1854,13.1854,0,0,1-5.3985,2.2329,12.4356,12.4356,0,0,0,1.2675-1.8393,10.866,10.866,0,0,0,.8233-1.9385,10.6985,10.6985,0,0,0,3.6087-2.7614A11.4835,11.4835,0,0,1,32.74,36.0521Z" />
+                                    <path class="ais-1"
+                                        d="M23.8252,38.4416a13.1692,13.1692,0,0,1-5.5714-1.7587,10.9928,10.9928,0,0,0,4.03-1.5519,10.6663,10.6663,0,0,0,4.5393.199A11.3524,11.3524,0,0,1,23.8252,38.4416Z" />
+                                    <path class="ais-1"
+                                        d="M15.4541,34.5459a13.6623,13.6623,0,0,1-3.1294-4.9324,11.1221,11.1221,0,0,0,4.0792,1.4036,10.7208,10.7208,0,0,0,3.3521,3.069A11.4517,11.4517,0,0,1,15.4541,34.5459Z" />
+                                    <path class="ais-1"
+                                        d="M11.5584,26.1748a13.5775,13.5775,0,0,1,.7663-5.7883,11.1439,11.1439,0,0,0,2.2225,3.6971,10.5778,10.5778,0,0,0,.5965,4.5037A11.14,11.14,0,0,1,11.5584,26.1748Z" />
+                                    <path class="ais-1"
+                                        d="M13.9479,17.26a13.7179,13.7179,0,0,1,4.3059-3.9431,11.4619,11.4619,0,0,0-.6784,4.2583,10.6616,10.6616,0,0,0-2.4317,3.8373A11.1229,11.1229,0,0,1,13.9479,17.26Z" />
+                                    <path class="ais-1"
+                                        d="M21.51,11.9707a13.6633,13.6633,0,0,1,5.8318-.2557,11.3647,11.3647,0,0,0-3.2577,2.8322,10.1684,10.1684,0,0,0-4.3276,1.3667A10.9945,10.9945,0,0,1,21.51,11.9707Z" />
+                                    <path class="ais-1"
+                                        d="M30.7015,12.7746a13.6993,13.6993,0,0,1,4.6365,3.55,11.48,11.48,0,0,0-4.3209.0792A10.1848,10.1848,0,0,0,26.8235,14.67a11.0757,11.0757,0,0,1,1.7853-1.1157A12.2134,12.2134,0,0,1,30.7015,12.7746Z" />
+                                    <path class="ais-1"
+                                        d="M37.2254,19.2985A13.503,13.503,0,0,1,38.5,25a11.4,11.4,0,0,0-3.369-2.7158,10.3761,10.3761,0,0,0-2.09-4.03A11.2626,11.2626,0,0,1,37.2254,19.2985Z" />
+                                </svg>
+                            </div>
+
+                            <div class="alarm-item" style="background-color: #00A651;">
+                                <svg width="50" height="50">
+                                    <defs>
+                                        <style>
+                                            .ais-2 {
+                                                fill: #e6e6e5;
+                                            }
+                                        </style>
+                                    </defs>
+                                    <path class="ais-2"
+                                        d="M14.7261,30.0773q-1.4822.2118-2.973.3778a9.312,9.312,0,0,0,.8789,2.918q1.335-.6942,2.6886-1.3448A6.1929,6.1929,0,0,1,14.7261,30.0773Z" />
+                                    <path class="ais-2"
+                                        d="M14.6348,26.5353q-1.4727-.2931-2.9388-.6313a9.3979,9.3979,0,0,0-.13,3.038q1.4863-.2046,2.9758-.3625A6.2574,6.2574,0,0,1,14.6348,26.5353Z" />
+                                    <path class="ais-2"
+                                        d="M15.7156,23.1546q-1.2915-.7579-2.5617-1.5565a9.4945,9.4945,0,0,0-1.1362,2.8187q1.4751.2978,2.9377.64A6.339,6.339,0,0,1,15.7156,23.1546Z" />
+                                    <path class="ais-2"
+                                        d="M17.8468,20.3293q-.9669-1.149-1.9-2.33a9.3468,9.3468,0,0,0-1.9988,2.2991q1.2909.7643,2.555,1.5669A6.2159,6.2159,0,0,1,17.8468,20.3293Z" />
+                                    <path class="ais-2"
+                                        d="M20.7985,18.3818Q20.2762,16.98,19.7971,15.56a9.6746,9.6746,0,0,0-2.6647,1.4769q.9616,1.1583,1.885,2.344A6.59,6.59,0,0,1,20.7985,18.3818Z" />
+                                    <path class="ais-2"
+                                        d="M24.236,17.5543q-.02-1.5.0054-3.0026a8.0292,8.0292,0,0,0-1.5217.13,7.4148,7.4148,0,0,0-1.4814.3761q.5154,1.4107.9853,2.8345a4.4291,4.4291,0,0,1,.992-.2519A4.4851,4.4851,0,0,1,24.236,17.5543Z" />
+                                    <path class="ais-2"
+                                        d="M27.7666,17.9014q.4738-1.4185.9913-2.8251a10.9067,10.9067,0,0,0-1.4741-.3886,12.4662,12.4662,0,0,0-1.5191-.1344c.01,1,.0042,1.9916-.0175,2.9964.34.0227.684.044,1.024.0939C27.1062,17.7218,27.4429,17.7956,27.7666,17.9014Z" />
+                                    <path class="ais-2"
+                                        d="M30.979,19.4069q.9174-1.1869,1.8727-2.3476a8.3128,8.3128,0,0,0-1.2711-.8448l-.6778-.3548-.7115-.2736q-.4791,1.4235-1.0007,2.8289a6.2913,6.2913,0,0,1,1.7884.9919Z" />
+                                    <path class="ais-2"
+                                        d="M33.5133,21.8729q1.2589-.8063,2.5448-1.5747a11.6861,11.6861,0,0,0-.9083-1.2307A13.0817,13.0817,0,0,0,34.0445,18.01c-.6145.7866-1.2395,1.5616-1.8831,2.3335.25.2285.5055.459.7392.709C33.1124,21.3219,33.3218,21.5935,33.5133,21.8729Z" />
+                                    <path class="ais-2"
+                                        d="M35.06,25.0586q1.461-.3408,2.9349-.6372a9.1417,9.1417,0,0,0-1.1362-2.8246q-1.2686.8031-2.5591,1.565A6.0934,6.0934,0,0,1,35.06,25.0586Z" />
+                                    <path class="ais-2"
+                                        d="M35.4643,28.579c.9955.1094,1.99.234,2.9778.3735a9.4388,9.4388,0,0,0-.1319-3.04q-1.4627.3343-2.9322.6226A6.4429,6.4429,0,0,1,35.4643,28.579Z" />
+                                    <path class="ais-2"
+                                        d="M34.6756,32.0333q1.3486.65,2.6792,1.3415a9.4289,9.4289,0,0,0,.8919-2.9106c-.9933-.1133-1.9812-.2414-2.9739-.3863A6.5947,6.5947,0,0,1,34.6756,32.0333Z" />
+                                </svg>
+                            </div>
+                            <div class="alarm-item" style="background-color: #00A651;">
+                                <svg width="50" height="50">
+                                    <path d="M14.5927,34a12.01,12.01,0,1,1,20.8,0"
+                                        style="fill:none; stroke:#e6e6e5; stroke-width:2px;" />
+                                </svg>
+                            </div>
+                            <div class="alarm-item"></div>
+                            <div class="alarm-item"></div>
+                            <div class="alarm-item"></div>
+
+                        </div>
+                        <div class="sub-title"></div>
                     </div>
 
-                    <!-- 1 / 5 -->
+                    <!-- 1 / 6 -->
                     <div class="grid-item grid-1x1">
-                        <p class="title">Temperature
-                            <span class="tooltiptext">SYS-SUBSYS:DEV-SUBDEV:Signal</span>
-                        </p>
-                        <p class="data">
-                            <span id="">2.5</span>
-                        </p>
-                        <div class="sub-title">Gas Bag</div>
+                        <p class="title">Gas</p>
+                        <svg id="gas-out" width="182" height="112" style="position: absolute; left:49px; top:84px;">
+                            <rect x="1" y="1" width="180" height="110" rx="55"
+                                style="fill:none;stroke:#2959a8;stroke-width:2px;opacity:0.3" />
+                        </svg>
+
+                        <svg id="gas-in" width="182" height="112" style="position: absolute; left:49px; top:84px;">
+                            <rect x="1" y="1" width="180" height="110" rx="55"
+                                style="fill:#29ABE2;"/>
+                        </svg>
+
+                        <div class="sub-title"></div>
                     </div>
 
                     <!-- 2 - 3 / 4 -->
@@ -981,6 +1077,8 @@
         // Page2 - Cryo
         simulation_page2_flow();
         simulation_dewer();
+        simulation_compressor();
+        simulation_alarm();
 
         var gridItemClass = document.getElementsByClassName("fade-animation");
         var sortIndexArray = Array();
@@ -1495,37 +1593,35 @@
         // FPS Node
         var fpsNodeClass = document.getElementsByClassName('fps-node');
         var colorArray = ['#004060', '#00A651', '#ED1A3B'];
-        setTimeout(function () {
 
-            setInterval(function () {
-                var randomNode = Math.floor(Math.random() * fpsNodeClass.length);
-                var colorIndex = Math.floor(Math.random() * 3)
+        setInterval(function () {
+            var randomNode = Math.floor(Math.random() * fpsNodeClass.length);
+            var colorIndex = Math.floor(Math.random() * 3)
 
-                var count = 0;
-                var id = setInterval(function () {
-                    if (count == 4) {
-                        clearInterval(id);
-                    }
+            var count = 0;
+            var id = setInterval(function () {
+                if (count == 4) {
+                    clearInterval(id);
+                }
 
-                    switch (count) {
-                        case 0:
-                        case 2:
-                        case 4:
-                            fpsNodeClass[randomNode].style.backgroundColor = colorArray[colorIndex];
-                            break;
+                switch (count) {
+                    case 0:
+                    case 2:
+                    case 4:
+                        fpsNodeClass[randomNode].style.backgroundColor = colorArray[colorIndex];
+                        break;
 
-                        case 1:
-                        case 3:
-                            fpsNodeClass[randomNode].style.backgroundColor = colorArray[0];
-                            break;
-                    }
+                    case 1:
+                    case 3:
+                        fpsNodeClass[randomNode].style.backgroundColor = colorArray[0];
+                        break;
+                }
 
-                    count += 1;
+                count += 1;
 
-                }, 50);
-            }, 3000);
+            }, 50);
+        }, 3000);
 
-        }, 1000);
     }
 
     function simulation_timestamp() {
@@ -2400,11 +2496,13 @@
     function simulation_dewer() {
         var dewerGradientPoint1 = document.getElementById('dewer-gradient-point1');
         var dewerGradientPoint2 = document.getElementById('dewer-gradient-point2');
+        var dewerValueID = document.getElementById('dewer-value');
         // var dewerValueID = document.getElementById('dewer-value');
 
         setInterval(function () {
             let dewerValue = Math.random().toFixed(1);
             // dewerValueID.innerText = dewerValue * 5000;
+            dewerValueID.innerText = Math.floor(dewerValue * 5000);
 
             dewerGradientPoint1.setAttribute('from', currentDewer);
             dewerGradientPoint1.setAttribute('to', dewerValue);
@@ -2424,13 +2522,97 @@
         var circle1ID = document.getElementById('compressor-circle1');
         var circle2ID = document.getElementById('compressor-circle2');
         var circle3ID = document.getElementById('compressor-circle3');
+        var compressorValueID = document.getElementById('compressor-value');
 
-        var circle1Degree = 0;
-        var circle2Degree = 0;
+        var circleDegree = 0;
         var alarm = false;
         var status = false;
 
-        
+        setInterval(function () {
+
+            if (status) {
+                status = false;
+            } else {
+                status = true;
+            }
+
+
+            var id = setInterval(function () {
+
+                if (!status) {
+                    clearInterval(id);
+                }
+
+                circle1ID.style.transform = `rotate(${circleDegree}deg)`;
+                circle2ID.style.transform = `rotate(${-circleDegree}deg)`;
+
+                circleDegree += 0.5;
+
+                if (circleDegree == 360) {
+                    circleDegree = 0;
+                }
+
+            }, 50);
+
+        }, 10000);
+
+        setInterval(function () {
+
+            if (alarm) {
+                circle3ID.style.borderColor = "#ED1E79"
+                alarm = false;
+            } else {
+                circle3ID.style.borderColor = "#22B573"
+                alarm = true;
+            }
+
+        }, 5000);
+
+        setInterval(function () {
+            compressorValueID.innerText = (Math.random() * 10).toFixed(1);
+        }, 3000);
+    }
+
+    function simulation_alarm() {
+        var alarmItemClass = document.getElementsByClassName('alarm-item');
+        var alarmStatus = [true, true, true, true, true, true];
+        // var colorArray = ['#004060', '#00A651', '#ED1A3B'];
+
+        setInterval(function () {
+            var index = Math.floor(Math.random() * alarmStatus.length);
+            var count = 0;
+            var color = "#004060";
+
+            if (alarmStatus[index]) {
+                color = "#ED1A3B";
+                alarmStatus[index] = false;
+            } else {
+                color = "#00A651";
+                alarmStatus[index] = true;
+            }
+
+            var id = setInterval(function () {
+                if (count == 4) {
+                    clearInterval(id);
+                }
+
+                switch (count) {
+                    case 0:
+                    case 2:
+                    case 4:
+                        alarmItemClass[index].style.backgroundColor = color;
+                        break;
+
+                    case 1:
+                    case 3:
+                        alarmItemClass[index].style.backgroundColor = "#004060";
+                        break;
+                }
+
+                count += 1;
+
+            }, 50);
+        }, 5000);
     }
 </script>
 
