--- a/raon-control/monitoring.html
+++ b/raon-control/monitoring.html
@@ -792,7 +792,12 @@
                     </div>
 
                     <!-- 2 - 3 / 4 -->
-                    <div class="grid-item grid-4x2 fade-animation" style="grid-column: 1/span 4; grid-row: 2 / span 3">
+                    <div class="grid-item grid-4x2 fade-animation" style=" grid-column: 1/span 4;grid-row: 2 / span 3">
+                        <div style="position: absolute; left: 20px; top:20px; width:120px; height:120px; border: rgba(0, 84, 188, 0.3) solid 2px; border-radius: 24px; ">
+                            <div style="position:absolute; top: 5px; width:100%; color:white; font-size: 20px; text-align: center;">Cooldown</div>
+                            <div style="position:absolute; top: 30px; width:100%; color:#b9b9b9; font-size: 16px; text-align: center;">400 - 4.5k</div>
+                            <div style="position:absolute; top: 50px; width: 60px; height: 60px; display: grid; background-color: white;"></div>
+                        </div>
                     </div>
 
                     <!-- 2 / 5 -->
@@ -1180,8 +1185,7 @@
 
     ////////////////////////////////////////////////////////////////////////////////////////////////////
     ////////////////////////////////////////////////////////////////////////////////////////////////////
-    ////////////////////////////////////////////////////////////////////////////////////////////////////
-    ////////////////////////////////////////////////////////////////////////////////////////////////////
+    ///////////////////////////////////      Window Load       /////////////////////////////////////////
     ////////////////////////////////////////////////////////////////////////////////////////////////////
     ////////////////////////////////////////////////////////////////////////////////////////////////////
 
@@ -1535,7 +1539,7 @@
 
     ////////////////////////////////////////////////////////////////////////////////////////////////////
     ////////////////////////////////////////////////////////////////////////////////////////////////////
-    ///////////////////////////////////           Page 1           /////////////////////////////////////
+    ///////////////////////////////      Simulation Page 1         /////////////////////////////////////
     ////////////////////////////////////////////////////////////////////////////////////////////////////
     ////////////////////////////////////////////////////////////////////////////////////////////////////
 
@@ -1750,12 +1754,13 @@
 
     }
 
+    var fpsIntervalID;
     function simulation_fps() {
         // FPS Node
         var fpsNodeClass = document.getElementsByClassName('fps-node');
         var colorArray = ['#004060', '#00A651', '#ED1A3B'];
 
-        setInterval(function () {
+        fpsIntervalID = setInterval(function () {
             var randomNode = Math.floor(Math.random() * fpsNodeClass.length);
             var colorIndex = Math.floor(Math.random() * 3)
 
@@ -2541,7 +2546,7 @@
 
     ////////////////////////////////////////////////////////////////////////////////////////////////////
     ////////////////////////////////////////////////////////////////////////////////////////////////////
-    ///////////////////////////////////           Page 2           /////////////////////////////////////
+    ///////////////////////////////      Simulation Page 2         /////////////////////////////////////
     ////////////////////////////////////////////////////////////////////////////////////////////////////
     ////////////////////////////////////////////////////////////////////////////////////////////////////
     function simulation_page2_flow() {
