--- a/raon-control/monitoring.html
+++ b/raon-control/monitoring.html
@@ -792,11 +792,26 @@
                     </div>
 
                     <!-- 2 - 3 / 4 -->
-                    <div class="grid-item grid-4x2 fade-animation" style=" grid-column: 1/span 4;grid-row: 2 / span 3">
+                    <div class="grid-item grid-4x2" style=" grid-column: 1/span 4;grid-row: 2 / span 3">
                         <div style="position: absolute; left: 20px; top:20px; width:120px; height:120px; border: rgba(0, 84, 188, 0.3) solid 2px; border-radius: 24px; ">
-                            <div style="position:absolute; top: 5px; width:100%; color:white; font-size: 20px; text-align: center;">Cooldown</div>
-                            <div style="position:absolute; top: 30px; width:100%; color:#b9b9b9; font-size: 16px; text-align: center;">400 - 4.5k</div>
-                            <div style="position:absolute; top: 50px; width: 60px; height: 60px; display: grid; background-color: white;"></div>
+                            <div style="position:absolute; top: 5px; width:100%; color:white; font-size: 16px; text-align: center;">Cooldown</div>
+                            <div style="position:absolute; top: 24px; width:100%; color:#b9b9b9; font-size: 12px; text-align: center;">400 - 4.5k</div>
+                            <div class="seq-contain">
+                                <div class="seq-item" style="--backgroundColor:#22B573"></div>
+                                <div class="seq-item" style="--backgroundColor:#22B573"></div>
+                                <div class="seq-item" style="--backgroundColor:#22B573"></div>
+                                <div class="seq-item" style="--backgroundColor:#22B573"></div>
+                                <div class="seq-item" style="--backgroundColor:#22B573"></div>
+                                <div class="seq-item" style="--backgroundColor:#22B573"></div>
+                                <div class="seq-item" style="--backgroundColor:none"></div>
+                                <div class="seq-item" style="--backgroundColor:none"></div>
+                                <div class="seq-item" style="--backgroundColor:none"></div>
+                                <div class="seq-item" style="--backgroundColor:none"></div>
+                                <div class="seq-item" style="--backgroundColor:none"></div>
+                                <div class="seq-item" style="--backgroundColor:none"></div>
+
+
+                            </div>
                         </div>
                     </div>
 
