--- a/raon-control/schedule.html
+++ b/raon-control/schedule.html
@@ -44,10 +44,10 @@
             <div class="title-box">Schedule</div>
 
             <div style="display: flex; position:relative; left: 25px; margin-top:10px">
-                <button id="last-button" onclick="lastCalendar(-1)">&#10094;</button>
+                <button id="last-button" onclick="createCalendar(-1)">&#10094;</button>
 
                 <div id="year">January 2021</div>
-                <button id="next-button" onclick="nextCalendar(1)">&#10095;</button>
+                <button id="next-button" onclick="createCalendar(1)">&#10095;</button>
             </div>
 
             <div style="display: flex;">
