--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -515,7 +515,7 @@
 
                 <div class="grid-item fade-animation"
                     style="width:620px; height:200px; grid-column: 1/3; grid-row: 4/5;">
-                    <svg width="622" height="202" style="position: absolute; top:-1px; left:-1px;">
+                    <svg width="622" height="202" style="position: absolute; top:-1px; left:-1px; z-index:-1">
                         <polyline class="boxEdgeStyle" points="10.5 0.5 0.5 0.5 0.5 10.5" />
                         <polyline class="boxEdgeStyle" points="621.5 10.5 621.5 0.5 611.5 0.5" />
                         <polyline class="boxEdgeStyle" points="611.5 201.5 621.5 201.5 621.5 191.5" />
@@ -555,7 +555,7 @@
                     style="fill: #0094c5; opacity: 0.5;" />
             </svg> -->
 
-            <div id="moduleName" style="color:white"><span id="moduleNumber">QWR 1</span></div>
+            <div id="moduleName"><span id="moduleNumber">QWR 1</span></div>
         </div>
 
         <!-- Right -->
@@ -810,7 +810,7 @@
 
                 <div class="grid-item fade-animation"
                     style="width:620px; height:200px; grid-column: 1/3; grid-row: 4/5;">
-                    <svg width="622" height="202" style="position: absolute; top:-1px; left:-1px;">
+                    <svg width="622" height="202" style="position: absolute; top:-1px; left:-1px; z-index: -1">
                         <polyline class="boxEdgeStyle" points="10.5 0.5 0.5 0.5 0.5 10.5" />
                         <polyline class="boxEdgeStyle" points="621.5 10.5 621.5 0.5 611.5 0.5" />
                         <polyline class="boxEdgeStyle" points="611.5 201.5 621.5 201.5 621.5 191.5" />
@@ -2409,6 +2409,9 @@
         rotationStart(1);
         fillStart(1, 50);
 
+        // Module Name Show up
+        document.getElementById('moduleName').style.opacity = 1.0;
+        
         // Module Show Up
         moduleShapeAni.setAttribute(
             'dur', '1s');
